--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   walletconnect_dart: ^0.0.11
   slider_button: ^2.0.0
   flutter_riverpod: ^2.0.2
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
